Fixing overflow to test on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -345,6 +345,11 @@ footer {
     html {
         margin: 0;
         padding: 0;
+        overflow: hidden;
+    }
+
+    body {
+        overflow: hidden;
     }
 
     main {
